--- a/data_analysis.html
+++ b/data_analysis.html
@@ -43,12 +43,17 @@
   </nav>
 
   <section class="head">
-  <ul class="nav nav-tabs" role="tablist">
-    <li class="nav-item"><a class="nav-link js-scroll-trigger active overview-button" href="javascript:;" onClick="showOverview();">Overview</a></li>
-    <li class="nav-item"><a class="nav-link js-scroll-trigger triplets-button" href="javascript:;"  onClick="showTriplet();">Triplets</a></li>
-    <li class="nav-item"><a class="nav-link js-scroll-trigger actions-button" href="javascript:;" onClick="showAction();">Actions</a></li>
-    <li class="nav-item"><a class="nav-link js-scroll-trigger objects-button" href="javascript:;" onClick="showObject();">Objects</a></li>
-  </ul>
+  <div class="row">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-10">
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item"><a class="nav-link js-scroll-trigger active overview-button" href="javascript:;" onClick="showOverview();">Overview</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger triplets-button" href="javascript:;"  onClick="showTriplet();">Triplets</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger actions-button" href="javascript:;" onClick="showAction();">Actions</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger objects-button" href="javascript:;" onClick="showObject();">Objects</a></li>
+      </ul>
+      </div>
+  </div>
   
   <hr class="half-rule"/>
     <div class="container overview">
