--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				</a>
 			    </div>
 			    <div class="content_publication">
-				<p class="title_paper"> Weakly Supervised Human and Object Detection via Spatiotemporal Interactions </p>
+				<p class="title_paper"> Weakly Supervised Human-Object Interaction Detection in Video via Contrastive Spatiotemporal Regions </p>
 				Shuang Li, Yilun Du, Antonio Torralba, Josef Sivic, Bryan Russell
 				<br>
 				<a href="./paper/virtualhome.pdf"> Paper</a> &nbsp;&nbsp;
@@ -99,7 +99,7 @@
 				<a href="https://shuangli-project.github.io/VHICO-Dataset/"> Dataset</a> &nbsp;&nbsp;
 				<a href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video"> PyTorch Code</a>
 				<br>
-				<em> IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021. (In submission) </em><br>
+<!-- 				<em> IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021. (In submission) </em><br> -->
 			    </div>
 			</div>
 		    </div>
