--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<a href="https://shuangli-project.github.io/VHICO-Dataset/"> Dataset</a> &nbsp;&nbsp;
 				<a href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video"> PyTorch Code</a>
 				<br>
-<!-- 				<em> IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021. (In submission) </em><br> -->
+				<em> International Conference on Computer Vision (ICCV), 2021. </em><br>
 			    </div>
 			</div>
 		    </div>
