--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			    <img src=./images/people/Josef.jpg class="figure-img img-fluid rounded-circle">
 			</a>
 			<p class=profname> Josef Sivic </p>
-			<p class=institution>INRIA</p>
+			<p class=institution>CIIRC CTU</p>
 			</div>
 
 			<div class="profpic xlarge-1 columns">
@@ -158,11 +158,6 @@
 	</section>
 
 
-	<div style="text-align:center">
-	    <img src="images/logos/mit.jpeg" width="100%" style="max-width:150px;" alt="MIT">
-	    <img src="images/logos/inria.png" width="100%" style="max-width:150px;" alt="INRIA">
-	    <img src="images/logos/adobe.png" width="100%" style="max-width:150px;" alt="Adobe">
-	</div>
 
 	<br>
 	<hr class="half-rule"/>
