--- a/data_download.html
+++ b/data_download.html
@@ -59,8 +59,7 @@
           <h3>Download</h3>
             <ul class="list-styled">
               <br>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Download videos</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Download human-object-interaction labels</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.dropbox.com/s/owy9jvuj273j2n1/gt_annotations.zip?dl=0">&#9642; Human-object-interaction labels and bounding box annotations</a></li>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Triplet list</a></li>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Action list</a></li>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Object list</a></li>
