--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#paper">Paper</a></li>
 			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_analysis.html">Data Analysis</a></li>
 			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_download.html">Download</a></li>
-			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_example.html">Explore</a></li>
+			<!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_example.html">Explore</a></li> -->
 			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video">Code</a></li>
 			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#team">Team</a></li>
 		    </ul>
