--- a/data_download.html
+++ b/data_download.html
@@ -60,9 +60,7 @@
             <ul class="list-styled">
               <br>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.dropbox.com/s/owy9jvuj273j2n1/gt_annotations.zip?dl=0">&#9642; Human-object-interaction labels and bounding box annotations</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Triplet list</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Action list</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Object list</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.dropbox.com/s/6y03849vvrmuf93/triplet.zip?dl=0&file_subpath=%2Ftriplet%2Flist">&#9642; Triplet/Action/Object lists</a></li>
             </ul>
         </div>
     </div>
