--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<p class="title_paper"> Weakly Supervised Human-Object Interaction Detection in Video via Contrastive Spatiotemporal Regions </p>
 				Shuang Li, Yilun Du, Antonio Torralba, Josef Sivic, Bryan Russell
 				<br>
-				<a href="./paper/virtualhome.pdf"> Paper</a> &nbsp;&nbsp;
+				<a href="https://arxiv.org/abs/2110.03562"> Paper</a> &nbsp;&nbsp;
 				<a href="https://shuangli-project.github.io/weakly-supervised-human-object-detection-video/"> Project</a> &nbsp;&nbsp;
 				<a href="https://shuangli-project.github.io/VHICO-Dataset/"> Dataset</a> &nbsp;&nbsp;
 				<a href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video"> PyTorch Code</a>
