--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<span class=titlesec>Team</span><br>
 		<div class="row">
 		    <div class="profpic xlarge-1 columns">
-			<a href='https://people.csail.mit.edu/lishuang/'>
+			<a href='https://shuangli59.github.io/'>
 			    <img  src=./images/people/lishuang.jpg class="figure-img img-fluid rounded-circle">
 			</a>
 			<p class=profname>Shuang Li</p>
